--- a/main_app/templates/cats/detail.html
+++ b/main_app/templates/cats/detail.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %} 
-{% load static %} 
+{% extends 'base.html' %}
+{% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/cats/cat-detail.css' %}" />
-{% endblock %} 
+{% endblock %}
 {% block content %}
 <section class="cat-container">
   <div class="cat-img">
@@ -11,11 +11,44 @@
   <div class="cat-details">
     <h1>{{ cat.name }}</h1>
     {% if cat.age > 0 %}
-      <h2>A {{ cat.age }} year old {{ cat.breed }}</h2>
+    <h2>A {{ cat.age }} year old {{ cat.breed }}</h2>
     {% else %}
-      <h2>A {{ cat.breed }} kitten.</h2>
+    <h2>A {{ cat.breed }} kitten.</h2>
     {% endif %}
     <p>{{ cat.description }}</p>
+
+    <div class="cat-actions">
+      <a href="{% url 'cat-update' cat.id %}" class="btn warn">Edit</a>
+      <a href="{% url 'cat-delete' cat.id %}" class="btn danger">Delete</a>
+    </div>
   </div>
+
 </section>
+<div class="feedings-toy-container">
+  <section class="feedings">
+    <div class="subsection-title">
+      <h2>Feedings</h2>
+      <img src="{% static 'images/cat-cone.svg' %}" alt="An ice cream cone cat" />
+      <img src="{% static 'images/cat-onigiri.svg' %}" alt="A cat as onigiri" />
+      <img src="{% static 'images/kitty-kabob.svg' %}" alt="A kabob of kittens" />
+    </div>
+    <table>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Meal</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for feeding in cat.feeding_set.all %}
+        <tr>
+          <td>{{feeding.date}}</td>
+          <td>{{feeding.get_meal_display}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </section>
+</div>
+
 {% endblock %}
