--- a/main_app/templates/cats/detail.html
+++ b/main_app/templates/cats/detail.html
@@ -32,6 +32,14 @@
       <img src="{% static 'images/cat-onigiri.svg' %}" alt="A cat as onigiri" />
       <img src="{% static 'images/kitty-kabob.svg' %}" alt="A kabob of kittens" />
     </div>
+    <h3>Add a Feeding</h3>
+    <form action="{% url 'add-feeding' cat.id %}" method="post" class="subsection-content" autocomplete="off">
+      {% csrf_token %}
+      {{ feeding_form.as_p }}
+      <button type="submit" class="btn submit">Add Feeding</button>
+    </form>
+    <h3>Past Feedings</h3>
+    {% if cat.feeding_set.all.count %}
     <table>
       <thead>
         <tr>
@@ -48,6 +56,11 @@
         {% endfor %}
       </tbody>
     </table>
+    {% else %}
+    <div class="subsection-content">
+      <p>⚠️ {{cat.name}} has not been fed!</p>
+    </div>
+    {% endif %}
   </section>
 </div>
 
